Continue ESMF implementation
